fix: overflow text

--- a/styles/table.css
+++ b/styles/table.css
@@ -4,6 +4,11 @@
   width: 95%;
 }
 
+.main table td {
+  max-width: 40px;
+  word-wrap: break-word;
+}
+
 .main table tr {
   text-align: center;
   background-color: white;
